[package]
name = "my-dg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.4"
futures = "0.3.26"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
uuid = "1.3.0"
mini-redis = "0.4"
proc_qq = "0.1.23"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing = "*"